--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,7 @@
-<h3>Generate PDF Document With Node JS</h3>
-<a href="/download" class="btn btn-success">Generate Pdf</a>
+<h3>URL</h3>
+<div style="padding:20px;">
+    <form action="/result" method="POST">
+        <input type="text" id="urlInput" name="url" placeholder="Enter URL">
+        <button type="submit" class="btn btn-success">Scan nmap</button>
+    </form>
+</div>
