--- a/views/layout_result.ejs
+++ b/views/layout_result.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
 </head>
 <body>
-    <%- include('partials/header_home') %>
+    <%- include('partials/header_result') %>
     <div class="container"><%- body %></div>
 </body>
 </html>
