--- a/views/partials/header_home.ejs
+++ b/views/partials/header_home.ejs
@@ -1,9 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarColor02">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-        </ul>
+    <a class="navbar-brand" href="#">Cyber Security</a>
+    <a class="navbar-brand" href="/">Nmap</a>
+    <a class="navbar-brand" href="/Nikto">Nikto</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          
+        </li>
+        <li class="nav-item">
+       
+        </li>
+        <li class="nav-item">
+         
+        </li>
+      </ul>
     </div>
-</nav>
+  </nav>
