--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,4 +1,37 @@
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scan Result</title>
+  <script>
+    async function generateReport() {
+      try {
+        const response = await fetch('/generateReport');
+        if (response.ok) {
+          const pdfBlob = await response.blob();
+          const url = URL.createObjectURL(pdfBlob);
+          window.open(url, '_blank');
+        } else {
+          const result = await response.json();
+          alert(result.message);
+        }
+      } catch (error) {
+        console.error('Erreur:', error);
+        alert('Erreur lors de la génération du rapport.');
+      }
+    }
+  </script>
+</head>
+<body>
+  <div>
     <h1>Scan Result</h1>
-    <iframe src="../DocsHtml/resultat.html " style="width:100%; height:500px;" frameborder="0"></iframe>
-</div>
+    <div class="text-right">
+      <a href="/generate-pdf" class="btn btn-primary">Download PDF</a>
+      <button onclick="generateReport()" class="btn btn-success">Generate Report</button>
+      <a href="/sendEmail" class="btn btn-info">Send Email</a>
+    </div>
+    <iframe src="../DocsHtml/resultat.html" style="width:100%; height:500px;" frameborder="0"></iframe>
+  </div>
+</body>
+</html>
