--- a/views/nikto.ejs
+++ b/views/nikto.ejs
@@ -33,7 +33,7 @@
       <div class="form-header text-center">
         <h3>Scan URL with Nikto</h3>
       </div>
-      <form class="form-inline justify-content-center" action="/niktoScan" method="POST">
+      <form class="form-inline justify-content-center" action="/RsultNikto" method="POST">
         <div class=" form-group mx-sm-3 mb-2">
           <label for="urlInput" class="sr-only">Enter a URL, IP address or hostname</label>
           <input type="text" class="form-control width=30vw" id="urlInput" name="url" placeholder="Enter a URL, IP address " required>
