--- a/views/resultnikto.ejs
+++ b/views/resultnikto.ejs
@@ -29,7 +29,7 @@
     <div class="text-right">
       <a href="/generatenikto-pdf" class="btn btn-primary">Download PDF</a>
       <!-- <button onclick="generateReport()" class="btn btn-success">Generate Report</button> -->
-      <a href="/sendEmail" class="btn btn-info">Send Email</a>
+      <a href="/sendEmailnikto" class="btn btn-info">Send-Email</a>
     </div>
     <iframe src="../DocsHtml/resultatnikto.html" style="width:100%; height:500px;" frameborder="0"></iframe>
   </div>
