--- a/views/layout__nikto.ejs
+++ b/views/layout__nikto.ejs
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
 </head>
 <body>
-    <%- include('partials/header_home') %>
-    <!-- <%- include('partials/header_nikto') %> -->
+    <!-- <%- include('partials/header_home') %> -->
+    <%- include('partials/header_nikto.ejs') %>
     <div class="container"><%- body %></div>
 </body>
 </html>
