--- a/views/partials/heade_resultnikto.ejs
+++ b/views/partials/heade_resultnikto.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Nikto</a>
+    <a class="navbar-brand" href="#">nmap</a>
     <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -10,9 +10,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Download-Pdf</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="#">Generate-Rapport</a>
-            </li> -->
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Envoi-Email</a>
             </li>
