--- a/views/templatee.ejs
+++ b/views/templatee.ejs
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pdf nmap Document</title>
-
+  <title>Pdf Nmap Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 </head>
 
 <body>
-  <section style="width: 100%; height: 100vh">
-    <div style="padding-left: 30vw; padding-top: 30vh">
-      <p style="color: rgb(16, 10, 68); font-size: 20px" class="time"></p>
-      <p style="font-size: 50px; font-weight: bold; color: rgb(7, 3, 40)">
+  <section style="width: 100%; height: 100vh;">
+    <div style="padding-left: 30vw; padding-top: 30vh;">
+      <p style="color: rgb(16, 10, 68); font-size: 20px;" class="time"></p>
+      <p style="font-size: 50px; font-weight: bold; color: rgb(7, 3, 40);">
         Vulnerability Scan
       </p>
-      <p style="color: rgb(21, 211, 245); font-size: 45px">Report</p>
-      <p style="color: rgb(16, 10, 68); font-size: 20px">
-        prepared by <br />
-        <span style="color: rgb(7, 3, 40); font-weight: bold">
-          Dabbaghi walid</span>
+      <p style="color: rgb(21, 211, 245); font-size: 45px;">Report</p>
+      <p style="color: rgb(16, 10, 68); font-size: 20px;">
+        Prepared by <br />
+        <span style="color: rgb(7, 3, 40); font-weight: bold;">
+          Dabbaghi Walid
+        </span>
       </p>
     </div>
   </section>
@@ -76,11 +76,11 @@
       </div>
     </div>
   </section>
-  <section style="width: 100%; height: 100vh">
-    <div style="margin-left: 20px">
-      <div style="padding-top: 60px; padding-bottom: 20px">
-        <h1 style="color: rgb(7, 3, 40)">1 Executive Summary</h1>
-        <p style="margin-right: 230px">
+  <section style="width: 100%; height: 100vh;">
+    <div style="margin-left: 20px;">
+      <div style="padding-top: 60px; padding-bottom: 20px;">
+        <h1 style="color: rgb(7, 3, 40);">1 Executive Summary</h1>
+        <p style="margin-right: 230px;">
           Vulnerability scans were conducted on selected servers, networks,
           websites, and applications. This report contains the discovered
           potential risks from these scans. Risks have been classified into
@@ -89,43 +89,42 @@
         </p>
       </div>
       <div>
-        <h2 style="color: rgb(7, 3, 40)">1.1 Total Risks</h2>
-        <p style="margin-right: 230px">
+        <h2 style="color: rgb(7, 3, 40);">1.1 Total Risks</h2>
+        <p style="margin-right: 230px;">
           Below is the total number of risks found by severity. High risks are
           the most severe and should be evaluated first. An accepted risk is
           one which has been manually reviewed and classified as acceptable to
-          not fix at this time, such as afalse positive or an intentional part
+          not fix at this time, such as a false positive or an intentional part
           of the system's architecture.
         </p>
-        <div style="padding-top: 30px">
+        <div style="padding-top: 30px;">
           <p>
-            <span class="highPorts" style="margin-right: 100px; color: rgb(218, 15, 204);">Number of high ports</span>
-            <span class="mediumPorts" style="margin-right: 91px; margin-left: 53px; color: rgb(255, 247, 0);">Number of medium ports</span>
-            <span class="lowPorts" style="margin-right: 69px; margin-left: 31px; color: rgb(79, 62, 230);">Number of low ports</span>
-            <span class="acceptedPorts" style="margin-left: 50px; color: rgb(0, 255, 47);">Number of accepted ports</span>
-        </p>
-          <!-- <p>
-
-            <span style="margin-right: 100px ;color: rgb(218, 15, 204);">0</span>
-            <span style="margin-right: 91px; margin-left: 53px ;color: rgb(255, 247, 0);">1</span>
-            <span style="margin-right: 69px; margin-left: 31px ;color: rgb(79, 62, 230);">2</span>
-            <span style="margin-left: 50px ;color: rgb(0, 255, 47);">0</span>
-          </p> -->
+            <span style="margin-right: 100px; color: rgb(218, 15, 204);">High</span>
+            <span style="margin-right: 100px; color: rgb(255, 247, 0);">Medium</span>
+            <span style="margin-right: 100px; color: rgb(79, 62, 230);">Low</span>
+            <span style="margin-right: 100px; color: rgb(0, 255, 47);">Accepted</span>
+          </p>
+          <p>
+            <span style="margin-right: 100px; color: rgb(218, 15, 204);">0</span>
+            <span style="margin-right: 91px; margin-left: 53px; color: rgb(255, 247, 0);">1</span>
+            <span style="margin-right: 69px; margin-left: 31px; color: rgb(79, 62, 230);">2</span>
+            <span style="margin-left: 50px; color: rgb(0, 255, 47);">0</span>
+          </p>
         </div>
-        <div style="padding-top: 60px; padding-bottom: 20px">
-          <h2 style="color: rgb(7, 3, 40)">1.2 Report Coverage</h2>
-          <p style="margin-right: 230px">
+        <div style="padding-top: 60px; padding-bottom: 20px;">
+          <h2 style="color: rgb(7, 3, 40);">1.2 Report Coverage</h2>
+          <p style="margin-right: 230px;">
             This report includes findings for
-            <span style="color: rgb(4, 203, 247)">1 target</span> that were
+            <span style="color: rgb(4, 203, 247);">1 target</span> that were
             scanned. Each target is a single URL, IP address, or fully
             qualified domain name (FQDN).
           </p>
-          <div style="margin-left: 50px">
+          <div style="margin-left: 50px;">
             <p style="font-size: 20px; color: rgb(7, 3, 40);">
               Vulnerability Categories
             </p>
-            <p class="numPorts" style="color: rgb(4, 203, 247)">number</p>
-            <p style="color: rgb(4, 203, 247)">Open TCP Ports</p>
+            <p style="color: rgb(4, 203, 247);"><%= numPorts %></p>
+            <p style="color: rgb(4, 203, 247);">Open TCP Ports</p>
           </div>
         </div>
       </div>
@@ -149,18 +148,18 @@
         <div style="    padding-top: 20PX;">
 
           <p><span style="margin-right: 100PX; color: rgb(7, 3, 40);">Target</span>
-          <p style="color: rgb(7, 3, 40);" class="adresse-nomHote"> </p>
-          <!-- <p><span style="margin-right: 100PX;color: rgb(218, 15, 204);">High</span>
+          <p style="color: rgb(7, 3, 40);" class="nomHote"> </p>
+          <p><span style="margin-right: 100PX;color: rgb(218, 15, 204);">High</span>
             <span style="margin-right: 100PX;color: rgb(255, 247, 0);">Medium</span>
             <span style="margin-right: 100PX;color: rgb(79, 62, 230);">Low</span>
             <span style="margin-right: 100PX;color: rgb(0, 255, 47);">Accepted</span>
-          </p> -->
+          </p>
           <p>
-            <span class="highPorts" style="margin-right: 100px; color: rgb(218, 15, 204);">Number of high ports</span>
-            <span class="mediumPorts" style="margin-right: 91px; margin-left: 53px; color: rgb(255, 247, 0);">Number of medium ports</span>
-            <span class="lowPorts" style="margin-right: 69px; margin-left: 31px; color: rgb(79, 62, 230);">Number of low ports</span>
-            <span class="acceptedPorts" style="margin-left: 50px; color: rgb(0, 255, 47);">Number of accepted ports</span>
-        </p>
+            <span style="margin-right: 100px ;color: rgb(218, 15, 204);">0</span>
+            <span style="margin-right: 91px; margin-left: 53px ;color: rgb(255, 247, 0);">1</span>
+            <span style="margin-right: 69px; margin-left: 31px ;color: rgb(79, 62, 230);">2</span>
+            <span style="margin-left: 50px ;color: rgb(0, 255, 47);">0</span>
+          </p>
 
         </div>
       </div>
@@ -173,30 +172,36 @@
         <p>
           The risks discovered for each target.
         </p>
-        <p><span style="margin-right: 100PX;  color: rgb(7, 3, 40);">Target</span>
-
-        <h2 style="color: rgb(4, 203, 247)" class="adresse-nomHote"></h2>
-        <div style="    padding-top: 20PX;">
-          <p style="color: rgb(7, 3, 40);">Total Risks:</p>
-          <!-- <p><span style="margin-right: 100PX;color: rgb(218, 15, 204);">High</span>
-            <span style="margin-right: 100PX;color: rgb(255, 247, 0);">Medium</span>
-            <span style="margin-right: 100PX;color: rgb(79, 62, 230);">Low</span>
-            <span style="margin-right: 100PX;color: rgb(0, 255, 47);">Accepted</span>
-          </p> -->
-          <p>
-            <span class="highPorts" style="margin-right: 100px; color: rgb(218, 15, 204);">Number of high ports</span>
-            <span class="mediumPorts" style="margin-right: 91px; margin-left: 53px; color: rgb(255, 247, 0);">Number of medium ports</span>
-            <span class="lowPorts" style="margin-right: 69px; margin-left: 31px; color: rgb(79, 62, 230);">Number of low ports</span>
-            <span class="acceptedPorts" style="margin-left: 50px; color: rgb(0, 255, 47);">Number of accepted ports</span>
-        </p>
-          <p style="color: rgb(7, 3, 40);">Open Ports</p>
-          <div class="portsContainer"></div>
-        </div>
+        <% targets.forEach(target => { %>
+          <p><span style="margin-right: 100PX; color: rgb(7, 3, 40);">Target</span></p>
+          <h2 style="color: rgb(4, 203, 247)" class="nomHote"><%= target.name %></h2>
+          <div style="padding-top: 20PX;">
+            <p style="color: rgb(7, 3, 40);">Total Risks:</p>
+            <p>
+              <span style="margin-right: 100PX;color: rgb(218, 15, 204);">High</span>
+              <span style="margin-right: 100PX;color: rgb(255, 247, 0);">Medium</span>
+              <span style="margin-right: 100PX;color: rgb(79, 62, 230);">Low</span>
+              <span style="margin-right: 100PX;color: rgb(0, 255, 47);">Accepted</span>
+            </p>
+            <p>
+              <span style="margin-right: 100px;color: rgb(218, 15, 204);"><%= target.high %></span>
+              <span style="margin-right: 91px; margin-left: 53px;color: rgb(255, 247, 0);"><%= target.medium %></span>
+              <span style="margin-right: 69px; margin-left: 31px;color: rgb(79, 62, 230);"><%= target.low %></span>
+              <span style="margin-left: 50px;color: rgb(0, 255, 47);"><%= target.accepted %></span>
+            </p>
+            <p style="color: rgb(7, 3, 40);">Open Ports</p>
+            <% for (let i = 0; i < numPorts; i++) { %>
+              <p style="color: rgb(4, 203, 247)">
+                Open <span class="protocole<%= i %>"></span> Port:
+                <span style="color: rgb(4, 203, 247)" class="port<%= i %>"> <%= target.ports[i] %> </span>
+              </p>
+            <% } %>
+          </div>
+        <% }); %>
       </div>
-
     </div>
-
   </section>
+  
   <section style="width: 100%; height: 100vh;">
     <div style="margin-left: 20px">
       <div style="padding-top: 60px; padding-bottom: 20px">
@@ -210,36 +215,36 @@
         <p>
           Total number of risks found by severity.
         </p>
-        <div style="    padding-top: 20PX;">
-          <!-- <p><span style="margin-right: 100PX;color: rgb(218, 15, 204);">High</span>
+        <div style="padding-top: 20PX;">
+          <p>
+            <span style="margin-right: 100PX;color: rgb(218, 15, 204);">High</span>
             <span style="margin-right: 100PX;color: rgb(255, 247, 0);">Medium</span>
             <span style="margin-right: 100PX;color: rgb(79, 62, 230);">Low</span>
             <span style="margin-right: 100PX;color: rgb(0, 255, 47);">Accepted</span>
-          </p> -->
+          </p>
           <p>
-            <span class="highPorts" style="margin-right: 100px; color: rgb(218, 15, 204);">Number of high ports</span>
-            <span class="mediumPorts" style="margin-right: 91px; margin-left: 53px; color: rgb(255, 247, 0);">Number of medium ports</span>
-            <span class="lowPorts" style="margin-right: 69px; margin-left: 31px; color: rgb(79, 62, 230);">Number of low ports</span>
-            <span class="acceptedPorts" style="margin-left: 50px; color: rgb(0, 255, 47);">Number of accepted ports</span>
-        </p>
-
+            <span style="margin-right: 100px ;color: rgb(218, 15, 204);"><%= totalHigh %></span>
+            <span style="margin-right: 91px; margin-left: 53px ;color: rgb(255, 247, 0);"><%= totalMedium %></span>
+            <span style="margin-right: 69px; margin-left: 31px ;color: rgb(79, 62, 230);"><%= totalLow %></span>
+            <span style="margin-left: 50px ;color: rgb(0, 255, 47);"><%= totalAccepted %></span>
+          </p>
         </div>
-        <div style="    padding-top: 20PX;">
+        <div style="padding-top: 20PX;">
           <h2 style="color: rgb(7, 3, 40);">3.2 Risks Breakdown</h2>
           <p>Summary list of all detected risks.</p>
-
-          <p style="margin-right: 100PX;  color: rgb(7, 3, 40);">Open Ports(Title):</p>
-          <div class="portsContainer"></div>
-          <!-- <p style="color: rgb(4, 203, 247)">Open <span class="protocole"></span> Port: <span
-              style="color: rgb(4, 203, 247)" class="port"> </span> </p>
-          <p style="color: rgb(4, 203, 247)">Open <span class="protocole1"></span> Port: <span
-              style="color: rgb(4, 203, 247)" class="port1"> </span> </p>
-              <p style="color: rgb(4, 203, 247)">Open <span class="protocole2"></span> Port: <span
-                style="color: rgb(4, 203, 247)" class="port2"> </span> </p> -->
+  
+          <p style="margin-right: 100PX; color: rgb(7, 3, 40);">Open Ports(Title):</p>
+          <% for (let i = 0; i < numPorts; i++) { %>
+            <p style="color: rgb(4, 203, 247)">
+              Open <span class="protocole<%= i %>"></span> Port:
+              <span style="color: rgb(4, 203, 247)" class="port<%= i %>"><%= ports[i] %></span>
+            </p>
+          <% } %>
         </div>
       </div>
     </div>
   </section>
+  
   <section style="width: 100%; height: 100vh;">
     <div style="margin-left: 20px">
       <div style="padding-top: 60px; padding-bottom: 20px">
@@ -247,7 +252,8 @@
         <p>
           Detailed information about each risk found by the scan.
         </p>
-        <p><span style="color: rgb(7, 3, 40); font-size: 20PX;">Open <span class="protocole"></span> Port: <span class="lesportmedium"></span> </span> </span><span style="color: rgb(255, 247, 0); font-size: 20px;">meduim</span></p>
+        <p><span style="color: rgb(7, 3, 40); font-size: 20PX;">Open <span class="protocole"></span> Port: <span
+              class="port"> </span> </span><span style="color: rgb(255, 247, 0); font-size: 20px;">meduim</span></p>
         <p style="font-size: 20px; color: rgb(7, 3, 40);">Description</p>
         <p style="margin-right: 230px">An open port may be an expected configuration. For example, web servers use port
           80 to serve websites over http and port 443 to
@@ -257,17 +263,19 @@
           can also be dangerous
           when expected services are out of date and exploited through security vulnerabilities.</p>
       </div>
-      <div id="portsContainer"></div>
       <div>
         <p>Vulnerable Target</p>
-        <p style="color: rgb(4, 203, 247)" class="adresse-nomHote"> </p>
+        <p style="color: rgb(4, 203, 247)" class="nomHote"> </p>
 
       </div>
   </section>
   <section style="width: 100%; height: 100vh;">
     <div style="margin-left: 20px">
       <div style="padding-top: 60px; padding-bottom: 20px">
-        <p><span style="color: rgb(7, 3, 40); font-size: 20PX;">Open <span class="protocole"></span> Port: <span class="lesportlow"></span> </span> </span><span style="color: rgb(79, 62, 230);; font-size: 20px;">Low</span></p>
+        <p style="padding-top: 60px; padding-bottom: 20px ; font-size: 20px;">Open <span class="protocole1"></span>
+          Port: <span class="port1"> </span> <span style="color: rgb(79, 62, 230); font-size: 20px;">Low</span></p>
+          <p style="padding-top: 60px; padding-bottom: 20px ; font-size: 20px;">Open <span class="protocole2"></span>
+            Port: <span class="port2"> </span> <span style="color: rgb(79, 62, 230); font-size: 20px;">Low</span></p>
         <p style="font-size: 20px; color: rgb(7, 3, 40);">Description</p>
         <p style="margin-right: 230px">An open port may be an expected configuration. For example, web servers use port
           80 to serve websites over http and port 443 to
@@ -279,7 +287,7 @@
       </div>
       <div>
         <p>Vulnerable Target</p>
-        <p style="color: rgb(4, 203, 247)" class="adresse-nomHote"> </p>
+        <p style="color: rgb(4, 203, 247)" class="nomHote"> </p>
 
       </div>
   </section>
@@ -328,8 +336,8 @@
         <p style="font-weight: bold;color: rgb(7, 3, 40);">Threat Level</p>
         <p style="margin-right: 230px;padding-bottom: 4PX;">
           The threat level represents the estimated potential severity
-          of a particular risk. Threat level is divided into 4
-          categories:High, Medium, Low and Accepted.
+          of a particular risk. Threat level is divided into 5
+          categories: Critical, High, Medium, Low and Accepted.
         </p>
         <p style=" font-weight: bold;color: rgb(7, 3, 40);">CVSS Score</p>
         <p style=" margin-right: 230px;padding-bottom: 4PX;">
